--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+###Logging
+logging.file.path=./logs
