--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 ###Logging
 logging.file.path=./logs
+###Security
+security.secret=32a8db2b916f39b2701874bcbe12a224422079ba
+security.issuer=AuthServer
+security.expire-hours=24
+security.admin-expire-hours=2
