--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=authserver2
 server.servlet.context-path=/api
 springdoc.swagger-ui.use-root-path=true
+server.port=8090
 
 spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.username=sa
